## v0.3.0:

* Move account authorization out of config to cli
* Updated obtions for update to use -u (not -v) for update
* Cleaned up archive specs
* Added authorize cli class

## v0.2.0:

* Command line options updates for each sub command.
* Command line option moved into seperate class.
* Artifact renamed to archive across the gem.
* Added bucket verification

## v0.1.4:

* Limit list of artifact ids returned in list
* Sort ids by date added
* Show latest id as default
* Setting deafult download path to local dir