@@ -12,9 +12,11 @@ module Heirloom
     end
 
     def destroy
+      regions = args[:regions]
+
       logger.info "Destroying #{@name} - #{@id}"
 
-      config.regions.each do |region|
+      regions.each do |region|
         bucket = reader.get_bucket :region => region
 
         key = "#{id}.tar.gz"
