@@ -1,6 +1,7 @@
 ## v0.3.0:
 
 * Move account authorization out of config to cli
+* Move region select out of config to cli
 * Updated obtions for update to use -u (not -v) for update
 * Cleaned up archive specs
 * Added authorize cli class
